# Hotplate

./: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig  sdkconfig.old
components/ui/: CMakeLists.txt  ui.c  ui.h
components/ui/screens/: ui_Screen1.c
main/: main.cpp
src/: main.cpp
